--- a/i18n/es/code.json
+++ b/i18n/es/code.json
@@ -1,4 +1,46 @@
 {
+  "homepage.heroTitle": {
+    "message": "Documentación de UnderSilicon"
+  },
+  "homepage.heroTagline": {
+    "message": "Explora el ecosistema inteligente de UnderSilicon y desbloquea infinitas formas de interacción"
+  },
+  "homepage.visitDocs": {
+    "message": "Comenzar"
+  },
+  "homepage.downloadClient": {
+    "message": "Descargar cliente"
+  },
+  "homepage.title": {
+    "message": "Bienvenido a la documentación de UnderSilicon"
+  },
+  "homepage.description": {
+    "message": "Sitio web de documentación de UnderSilicon"
+  },
+  "硬件生态与连接": {
+    "message": "Ecosistema de hardware y conexión"
+  },
+  "支持多种智能终端（电机、跳蛋、脉冲等），极速 WiFi 配网，稳定连接，轻松上手。": {
+    "message": "Compatible con múltiples dispositivos inteligentes (motores, vibradores, estimuladores de pulso, etc.), configuración WiFi ultrarrápida, conexión estable y fácil de usar."
+  },
+  "无限创意玩法": {
+    "message": "Jugabilidad creativa ilimitada"
+  },
+  "内置俯卧撑检测、电击问答、寸止训练等多种趣味互动模式，让控制更有趣。": {
+    "message": "Incluye múltiples modos de interacción divertidos como detección de flexiones, preguntas y respuestas con descargas, entrenamiento de control de la eyaculación, etc., haciendo el control más interesante."
+  },
+  "全平台控制": {
+    "message": "Control multiplataforma"
+  },
+  "提供强大的电脑客户端与手机端支持（App/小程序），随时随地掌控设备状态。": {
+    "message": "Ofrece potente soporte para cliente de escritorio y móvil (App/mini-programa), permitiéndote controlar el estado del dispositivo en cualquier momento y lugar."
+  },
+  "开放开发生态": {
+    "message": "Ecosistema de desarrollo abierto"
+  },
+  "提供 Python 控制接口与开源代码，支持开发者自定义扩展，共建智能玩具体验。": {
+    "message": "Proporciona interfaz de control Python y código abierto, compatible con extensiones personalizadas por desarrolladores para construir juntos la experiencia de juguetes inteligentes."
+  },
   "theme.ErrorPageContent.title": {
     "message": "La página ha fallado.",
     "description": "The title of the fallback page when the page crashed"
@@ -8,11 +50,11 @@
     "description": "The ARIA label for the back to top button"
   },
   "theme.blog.archive.title": {
-    "message": "Publicaciones de blog archivadas",
+    "message": "Publicaciones archivadas",
     "description": "The page & hero title of the blog archive page"
   },
   "theme.blog.archive.description": {
-    "message": "Publicaciones de blog archivadas",
+    "message": "Publicaciones archivadas",
     "description": "The page & hero description of the blog archive page"
   },
   "theme.blog.paginator.navAriaLabel": {
@@ -59,13 +101,13 @@
     "message": "Cambiar entre modo claro/oscuro (actualmente: {mode})",
     "description": "The ARIA label for the color mode toggle"
   },
-  "theme.docs.DocCard.categoryDescription.plurals": {
-    "message": "{count} elementos",
-    "description": "The default description for a category card in the generated index about how many items this category includes"
-  },
   "theme.docs.breadcrumbs.navAriaLabel": {
     "message": "Ruta de la página",
     "description": "The ARIA label for the breadcrumbs"
+  },
+  "theme.docs.DocCard.categoryDescription.plurals": {
+    "message": "{count} elementos",
+    "description": "The default description for a category card in the generated index about how many items this category includes"
   },
   "theme.docs.paginator.navAriaLabel": {
     "message": "Pestañas de documentos",
@@ -84,18 +126,18 @@
     "description": "Pluralized label for \"{count} docs tagged\". Use as much plural forms (separated by \"|\") as your language support (see https://www.unicode.org/cldr/cldr-aux/charts/34/supplemental/language_plural_rules.html)"
   },
   "theme.docs.tagDocListPageTitle": {
-    "message": "{nDocsTagged} «{tagName}»",
+    "message": "{nDocsTagged} con «{tagName}»",
     "description": "The title of the page for a docs tag"
   },
   "theme.docs.versionBadge.label": {
     "message": "Versión: {versionLabel}"
   },
   "theme.docs.versions.unreleasedVersionLabel": {
-    "message": "Esta es la documentación no publicada para {siteTitle} versión {versionLabel}.",
+    "message": "Esta es la documentación no publicada para la versión {versionLabel} de {siteTitle}.",
     "description": "The label used to tell the user that he's browsing an unreleased doc version"
   },
   "theme.docs.versions.unmaintainedVersionLabel": {
-    "message": "Esta es la documentación para {siteTitle} versión {versionLabel}, que ya no se mantiene activamente.",
+    "message": "Esta es la documentación para la versión {versionLabel} de {siteTitle}, que ya no se mantiene activamente.",
     "description": "The label used to tell the user that he's browsing an unmaintained doc version"
   },
   "theme.docs.versions.latestVersionSuggestionLabel": {
@@ -126,13 +168,13 @@
     "message": "Última actualización {byUser}{atDate}",
     "description": "The sentence used to display when a page has been last updated, and by who"
   },
-  "theme.NotFound.title": {
-    "message": "Página no encontrada",
-    "description": "The title of the 404 page"
-  },
   "theme.navbar.mobileVersionsDropdown.label": {
     "message": "Seleccionar versión",
     "description": "The label for the navbar versions dropdown on mobile view"
+  },
+  "theme.NotFound.title": {
+    "message": "Página no encontrada",
+    "description": "The title of the 404 page"
   },
   "theme.tags.tagsListLabel": {
     "message": "Etiquetas:",
@@ -186,21 +228,21 @@
     "message": "Navegación principal",
     "description": "The ARIA label for the main navigation"
   },
-  "theme.NotFound.p1": {
-    "message": "No pudimos encontrar la página que estás buscando.",
-    "description": "The first paragraph of the 404 page"
-  },
-  "theme.NotFound.p2": {
-    "message": "Ponte en contacto con el propietario del sitio desde el que proviene el enlace original e infórmale de que su enlace está roto.",
-    "description": "The 2nd paragraph of the 404 page"
-  },
-  "theme.TOCCollapsible.toggleButtonLabel": {
-    "message": "Descripción general de la página",
-    "description": "The label used by the button on the collapsible TOC component"
-  },
   "theme.navbar.mobileLanguageDropdown.label": {
     "message": "Seleccionar idioma",
     "description": "The label for the mobile language switcher dropdown"
+  },
+  "theme.NotFound.p1": {
+    "message": "No pudimos encontrar la página que buscas.",
+    "description": "The first paragraph of the 404 page"
+  },
+  "theme.NotFound.p2": {
+    "message": "Por favor, contacta al propietario del sitio desde donde proviene el enlace original e infórmales que el enlace está roto.",
+    "description": "The 2nd paragraph of the 404 page"
+  },
+  "theme.TOCCollapsible.toggleButtonLabel": {
+    "message": "Resumen de la página",
+    "description": "The label used by the button on the collapsible TOC component"
   },
   "theme.blog.post.readMore": {
     "message": "Leer más",
@@ -231,7 +273,7 @@
     "description": "The title attribute for toggle word wrapping button of code block lines"
   },
   "theme.docs.breadcrumbs.home": {
-    "message": "Página de inicio",
+    "message": "Página principal",
     "description": "The ARIA label for the home page in the breadcrumbs"
   },
   "theme.docs.sidebar.collapseButtonTitle": {
@@ -303,7 +345,7 @@
     "description": "The unlisted content banner title"
   },
   "theme.contentVisibility.unlistedBanner.message": {
-    "message": "Esta página no está listada. Los motores de búsqueda no la indexarán y solo los usuarios con un enlace directo pueden acceder.",
+    "message": "Esta página no está listada. Los motores de búsqueda no la indexarán, solo los usuarios con el enlace directo pueden acceder.",
     "description": "The unlisted content banner message"
   },
   "theme.contentVisibility.draftBanner.title": {
@@ -325,65 +367,5 @@
   "theme.tags.tagsPageTitle": {
     "message": "Etiquetas",
     "description": "The title of the tag list page"
-  },
-  "homepage.visitDocs": {
-    "message": "Ver instrucciones de uso"
-  },
-  "homepage.title": {
-    "message": "Bienvenido a {title}"
-  },
-  "homepage.description": {
-    "message": "Sitio de documentación de UnderSilicon"
-  },
-  "易于使用": {
-    "message": "Fácil de usar"
-  },
-  "Docusaurus 从一开始就设计为易于安装和使用，让您的网站快速运行起来。": {
-    "message": "Docusaurus se diseñó desde el principio para ser fácil de instalar y usar, permitiendo que tu sitio web funcione rápidamente."
-  },
-  "专注于核心内容": {
-    "message": "Enfócate en el contenido principal"
-  },
-  "Docusaurus 让您专注于文档本身，繁琐的工作交给我们。只需将文档放入 {docs} 目录即可。": {
-    "message": "Docusaurus te permite concentrarte en la documentación misma, dejándonos el trabajo tedioso. Simplemente coloca tus documentos en el directorio {docs}."
-  },
-  "基于 React 构建": {
-    "message": "Construido con React"
-  },
-  "通过复用 React 来扩展或定制您的网站布局。Docusaurus 支持在复用头部和底部的同时进行扩展。": {
-    "message": "Extiende o personaliza el diseño de tu sitio web reutilizando React. Docusaurus permite la extensión mientras se reutilizan encabezados y pies de página."
-  },
-  "homepage.downloadClient": {
-    "message": "Descargar cliente"
-  },
-  "硬件生态与连接": {
-    "message": "Ecosistema de hardware y conectividad"
-  },
-  "支持多种智能终端（电机、跳蛋、脉冲等），极速 WiFi 配网，稳定连接，轻松上手。": {
-    "message": "Soporta múltiples dispositivos inteligentes (motores, huevos vibratorios, pulsadores, etc.), configuración WiFi ultrarrápida, conexión estable y fácil de usar."
-  },
-  "无限创意玩法": {
-    "message": "Jugabilidad creativa ilimitada"
-  },
-  "内置俯卧撑检测、电击问答、寸止训练等多种趣味互动模式，让控制更有趣。": {
-    "message": "Incluye múltiples modos de interacción divertidos como detección de flexiones, preguntas y respuestas con descargas, entrenamiento de retención, etc., haciendo el control más interesante."
-  },
-  "全平台控制": {
-    "message": "Control multiplataforma"
-  },
-  "提供强大的电脑客户端与手机端支持（App/小程序），随时随地掌控设备状态。": {
-    "message": "Ofrece soporte potente para cliente de escritorio y móvil (App/mini-programa), permitiendo controlar el estado del dispositivo en cualquier momento y lugar."
-  },
-  "开放开发生态": {
-    "message": "Ecosistema de desarrollo abierto"
-  },
-  "提供 Python 控制接口与开源代码，支持开发者自定义扩展，共建智能玩具体验。": {
-    "message": "Proporciona interfaz de control Python y código abierto, permitiendo a los desarrolladores crear extensiones personalizadas y construir juntos la experiencia de juguetes inteligentes."
-  },
-  "homepage.heroTitle": {
-    "message": "Documentación de UnderSilicon"
-  },
-  "homepage.heroTagline": {
-    "message": "Explora el ecosistema inteligente de UnderSilicon y desbloquea infinitas posibilidades de interacción"
   }
 }
