--- a/i18n/de/code.json
+++ b/i18n/de/code.json
@@ -1,6 +1,48 @@
 {
+  "homepage.heroTitle": {
+    "message": "UnderSilicon Dokumentation"
+  },
+  "homepage.heroTagline": {
+    "message": "Erkunden Sie das UnderSilicon Smart Ecosystem und entsperren Sie unendliche interaktive Spielmöglichkeiten"
+  },
+  "homepage.visitDocs": {
+    "message": "Erste Schritte"
+  },
+  "homepage.downloadClient": {
+    "message": "Client herunterladen"
+  },
+  "homepage.title": {
+    "message": "Willkommen zur UnderSilicon Dokumentation"
+  },
+  "homepage.description": {
+    "message": "UnderSilicon Dokumentations-Website"
+  },
+  "硬件生态与连接": {
+    "message": "Hardware-Ökosystem und Verbindung"
+  },
+  "支持多种智能终端（电机、跳蛋、脉冲等），极速 WiFi 配网，稳定连接，轻松上手。": {
+    "message": "Unterstützt eine Vielzahl intelligenter Endgeräte (Motoren, Vibratoren, Impulsgeräte usw.), schnelle WiFi-Einrichtung, stabile Verbindung, einfacher Einstieg."
+  },
+  "无限创意玩法": {
+    "message": "Unendliche kreative Spielmöglichkeiten"
+  },
+  "内置俯卧撑检测、电击问答、寸止训练等多种趣味互动模式，让控制更有趣。": {
+    "message": "Integrierte interaktive Modi wie Liegestütz-Erkennung, Elektroschock-Fragen, Edging-Training und mehr machen die Steuerung unterhaltsamer."
+  },
+  "全平台控制": {
+    "message": "Plattformübergreifende Steuerung"
+  },
+  "提供强大的电脑客户端与手机端支持（App/小程序），随时随地掌控设备状态。": {
+    "message": "Leistungsstarke Desktop-Client- und Mobile-Unterstützung (App/Mini-Programm) ermöglicht Gerätestatuskontrolle von überall."
+  },
+  "开放开发生态": {
+    "message": "Offenes Entwicklungs-Ökosystem"
+  },
+  "提供 Python 控制接口与开源代码，支持开发者自定义扩展，共建智能玩具体验。": {
+    "message": "Bietet Python-Schnittstelle und Open-Source-Code, unterstützt Entwickler bei benutzerdefinierten Erweiterungen für ein gemeinsames Smart-Toy-Erlebnis."
+  },
   "theme.ErrorPageContent.title": {
-    "message": "Seite abgestürzt.",
+    "message": "Seite ist abgestürzt.",
     "description": "The title of the fallback page when the page crashed"
   },
   "theme.BackToTopButton.buttonAriaLabel": {
@@ -20,11 +62,11 @@
     "description": "The ARIA label for the blog pagination"
   },
   "theme.blog.paginator.newerEntries": {
-    "message": "Neuere Beiträge",
+    "message": "Neuere Blog-Einträge",
     "description": "The label used to navigate to the newer blog posts page (previous page)"
   },
   "theme.blog.paginator.olderEntries": {
-    "message": "Ältere Beiträge",
+    "message": "Ältere Blog-Einträge",
     "description": "The label used to navigate to the older blog posts page (next page)"
   },
   "theme.blog.post.paginator.navAriaLabel": {
@@ -59,13 +101,13 @@
     "message": "Hell-/Dunkelmodus umschalten (aktuell: {mode})",
     "description": "The ARIA label for the color mode toggle"
   },
-  "theme.docs.DocCard.categoryDescription.plurals": {
-    "message": "{count} Artikel",
-    "description": "The default description for a category card in the generated index about how many items this category includes"
-  },
   "theme.docs.breadcrumbs.navAriaLabel": {
-    "message": "Breadcrumb-Navigation",
+    "message": "Seitenpfad",
     "description": "The ARIA label for the breadcrumbs"
+  },
+  "theme.docs.DocCard.categoryDescription.plurals": {
+    "message": "{count} Elemente",
+    "description": "The default description for a category card in the generated index about how many items this category includes"
   },
   "theme.docs.paginator.navAriaLabel": {
     "message": "Dokumenten-Seitennavigation",
@@ -84,14 +126,14 @@
     "description": "Pluralized label for \"{count} docs tagged\". Use as much plural forms (separated by \"|\") as your language support (see https://www.unicode.org/cldr/cldr-aux/charts/34/supplemental/language_plural_rules.html)"
   },
   "theme.docs.tagDocListPageTitle": {
-    "message": "{nDocsTagged} „{tagName}“",
+    "message": "{nDocsTagged} «{tagName}»",
     "description": "The title of the page for a docs tag"
   },
   "theme.docs.versionBadge.label": {
     "message": "Version: {versionLabel}"
   },
   "theme.docs.versions.unreleasedVersionLabel": {
-    "message": "Dies ist die unveröffentlichte Dokumentation für {siteTitle} Version {versionLabel}.",
+    "message": "Dies ist die noch nicht veröffentlichte Dokumentation für {siteTitle} Version {versionLabel}.",
     "description": "The label used to tell the user that he's browsing an unreleased doc version"
   },
   "theme.docs.versions.unmaintainedVersionLabel": {
@@ -126,13 +168,13 @@
     "message": "Zuletzt aktualisiert {byUser}{atDate}",
     "description": "The sentence used to display when a page has been last updated, and by who"
   },
-  "theme.NotFound.title": {
-    "message": "Seite nicht gefunden",
-    "description": "The title of the 404 page"
-  },
   "theme.navbar.mobileVersionsDropdown.label": {
     "message": "Version auswählen",
     "description": "The label for the navbar versions dropdown on mobile view"
+  },
+  "theme.NotFound.title": {
+    "message": "Seite nicht gefunden",
+    "description": "The title of the 404 page"
   },
   "theme.tags.tagsListLabel": {
     "message": "Tags:",
@@ -147,7 +189,7 @@
     "description": "The default label used for the Danger admonition (:::danger)"
   },
   "theme.admonition.info": {
-    "message": "Info",
+    "message": "Information",
     "description": "The default label used for the Info admonition (:::info)"
   },
   "theme.admonition.note": {
@@ -171,11 +213,11 @@
     "description": "The ARIA label for recent posts in the blog sidebar"
   },
   "theme.DocSidebarItem.expandCategoryAriaLabel": {
-    "message": "Sidebar-Kategorie '{label}' erweitern",
+    "message": "Seitenleistenkategorie '{label}' erweitern",
     "description": "The ARIA label to expand the sidebar category"
   },
   "theme.DocSidebarItem.collapseCategoryAriaLabel": {
-    "message": "Sidebar-Kategorie '{label}' einklappen",
+    "message": "Seitenleistenkategorie '{label}' einklappen",
     "description": "The ARIA label to collapse the sidebar category"
   },
   "theme.IconExternalLink.ariaLabel": {
@@ -185,6 +227,10 @@
   "theme.NavBar.navAriaLabel": {
     "message": "Hauptnavigation",
     "description": "The ARIA label for the main navigation"
+  },
+  "theme.navbar.mobileLanguageDropdown.label": {
+    "message": "Sprache auswählen",
+    "description": "The label for the mobile language switcher dropdown"
   },
   "theme.NotFound.p1": {
     "message": "Die von Ihnen gesuchte Seite konnte nicht gefunden werden.",
@@ -198,20 +244,16 @@
     "message": "Seitenübersicht",
     "description": "The label used by the button on the collapsible TOC component"
   },
-  "theme.navbar.mobileLanguageDropdown.label": {
-    "message": "Sprache auswählen",
-    "description": "The label for the mobile language switcher dropdown"
-  },
   "theme.blog.post.readMore": {
     "message": "Weiterlesen",
     "description": "The label used in blog post item excerpts to link to full blog posts"
   },
   "theme.blog.post.readMoreLabel": {
-    "message": "Den vollständigen Beitrag {title} lesen",
+    "message": "Vollständigen Blogbeitrag {title} lesen",
     "description": "The ARIA label for the link to full blog posts from excerpts"
   },
   "theme.blog.post.readingTime.plurals": {
-    "message": "Lesezeit: {readingTime} Minuten",
+    "message": "{readingTime} Min. Lesezeit",
     "description": "Pluralized label for \"{readingTime} min read\". Use as much plural forms (separated by \"|\") as your language support (see https://www.unicode.org/cldr/cldr-aux/charts/34/supplemental/language_plural_rules.html)"
   },
   "theme.CodeBlock.copy": {
@@ -235,19 +277,19 @@
     "description": "The ARIA label for the home page in the breadcrumbs"
   },
   "theme.docs.sidebar.collapseButtonTitle": {
-    "message": "Sidebar einklappen",
+    "message": "Seitenleiste einklappen",
     "description": "The title attribute for collapse button of doc sidebar"
   },
   "theme.docs.sidebar.collapseButtonAriaLabel": {
-    "message": "Sidebar einklappen",
+    "message": "Seitenleiste einklappen",
     "description": "The title attribute for collapse button of doc sidebar"
   },
   "theme.docs.sidebar.navAriaLabel": {
-    "message": "Dokumenten-Sidebar",
+    "message": "Dokumentations-Seitenleiste",
     "description": "The ARIA label for the sidebar navigation"
   },
   "theme.docs.sidebar.closeSidebarButtonAriaLabel": {
-    "message": "Navigation schließen",
+    "message": "Navigationsleiste schließen",
     "description": "The ARIA label for close button of mobile sidebar"
   },
   "theme.navbar.mobileSidebarSecondaryMenu.backButtonLabel": {
@@ -255,7 +297,7 @@
     "description": "The label of the back button to return to main menu, inside the mobile navbar sidebar secondary menu (notably used to display the docs sidebar)"
   },
   "theme.docs.sidebar.toggleSidebarButtonAriaLabel": {
-    "message": "Navigation umschalten",
+    "message": "Navigationsleiste umschalten",
     "description": "The ARIA label for hamburger menu button of mobile navigation"
   },
   "theme.navbar.mobileDropdown.collapseButton.expandAriaLabel": {
@@ -267,19 +309,19 @@
     "description": "The ARIA label of the button to collapse the mobile dropdown navbar item"
   },
   "theme.docs.sidebar.expandButtonTitle": {
-    "message": "Sidebar erweitern",
+    "message": "Seitenleiste erweitern",
     "description": "The ARIA label and title attribute for expand button of doc sidebar"
   },
   "theme.docs.sidebar.expandButtonAriaLabel": {
-    "message": "Sidebar erweitern",
+    "message": "Seitenleiste erweitern",
     "description": "The ARIA label and title attribute for expand button of doc sidebar"
   },
   "theme.blog.post.plurals": {
-    "message": "{count} Beiträge",
+    "message": "{count} Blogbeiträge",
     "description": "Pluralized label for \"{count} posts\". Use as much plural forms (separated by \"|\") as your language support (see https://www.unicode.org/cldr/cldr-aux/charts/34/supplemental/language_plural_rules.html)"
   },
   "theme.blog.tagTitle": {
-    "message": "{nPosts} mit Tag „{tagName}“",
+    "message": "{nPosts} mit Tag «{tagName}»",
     "description": "The title of the page for a blog tag"
   },
   "theme.blog.author.pageTitle": {
@@ -303,15 +345,15 @@
     "description": "The unlisted content banner title"
   },
   "theme.contentVisibility.unlistedBanner.message": {
-    "message": "Diese Seite ist nicht gelistet. Suchmaschinen werden sie nicht indexieren, und nur Benutzer mit einem direkten Link können darauf zugreifen.",
+    "message": "Diese Seite ist nicht gelistet. Suchmaschinen indexieren sie nicht, nur Benutzer mit einem direkten Link können darauf zugreifen.",
     "description": "The unlisted content banner message"
   },
   "theme.contentVisibility.draftBanner.title": {
-    "message": "Seitenentwurf",
+    "message": "Entwurfsseite",
     "description": "The draft content banner title"
   },
   "theme.contentVisibility.draftBanner.message": {
-    "message": "Diese Seite ist ein Entwurf und nur in der Entwicklungsumgebung sichtbar. Sie wird nicht in der Produktionsversion enthalten sein.",
+    "message": "Diese Seite ist ein Entwurf, nur in Entwicklungsumgebungen sichtbar und wird nicht in der Produktionsversion enthalten sein.",
     "description": "The draft content banner message"
   },
   "theme.ErrorPageContent.tryAgain": {
@@ -325,65 +367,5 @@
   "theme.tags.tagsPageTitle": {
     "message": "Tags",
     "description": "The title of the tag list page"
-  },
-  "homepage.visitDocs": {
-    "message": "Dokumentation ansehen"
-  },
-  "homepage.title": {
-    "message": "Willkommen bei {title}"
-  },
-  "homepage.description": {
-    "message": "UnderSilicon Dokumentationswebsite"
-  },
-  "易于使用": {
-    "message": "Einfach zu verwenden"
-  },
-  "Docusaurus 从一开始就设计为易于安装和使用，让您的网站快速运行起来。": {
-    "message": "Docusaurus wurde von Grund auf so konzipiert, dass es einfach zu installieren und zu verwenden ist, damit Ihre Website schnell läuft."
-  },
-  "专注于核心内容": {
-    "message": "Fokus auf den Inhalt"
-  },
-  "Docusaurus 让您专注于文档本身，繁琐的工作交给我们。只需将文档放入 {docs} 目录即可。": {
-    "message": "Docusaurus ermöglicht es Ihnen, sich auf Ihre Dokumente zu konzentrieren, während wir die lästige Arbeit übernehmen. Legen Sie Ihre Dokumente einfach im {docs}-Verzeichnis ab."
-  },
-  "基于 React 构建": {
-    "message": "Auf React aufgebaut"
-  },
-  "通过复用 React 来扩展或定制您的网站布局。Docusaurus 支持在复用头部和底部的同时进行扩展。": {
-    "message": "Erweitern oder passen Sie Ihr Seitenlayout durch die Wiederverwendung von React an. Docusaurus kann erweitert werden, während Kopf- und Fußzeilen wiederverwendet werden."
-  },
-  "homepage.downloadClient": {
-    "message": "Client herunterladen"
-  },
-  "硬件生态与连接": {
-    "message": "Hardware-Ökosystem und Konnektivität"
-  },
-  "支持多种智能终端（电机、跳蛋、脉冲等），极速 WiFi 配网，稳定连接，轻松上手。": {
-    "message": "Unterstützt eine Vielzahl intelligenter Geräte (Motoren, Vibratoren, Impulsgeräte usw.), superschnelle WiFi-Einrichtung, stabile Verbindung, einfache Handhabung."
-  },
-  "无限创意玩法": {
-    "message": "Unendliche kreative Möglichkeiten"
-  },
-  "内置俯卧撑检测、电击问答、寸止训练等多种趣味互动模式，让控制更有趣。": {
-    "message": "Integrierte interaktive Modi wie Liegestütz-Erkennung, Elektroschock-Fragen, Edging-Training und mehr machen die Steuerung unterhaltsamer."
-  },
-  "全平台控制": {
-    "message": "Plattformübergreifende Steuerung"
-  },
-  "提供强大的电脑客户端与手机端支持（App/小程序），随时随地掌控设备状态。": {
-    "message": "Leistungsstarke Desktop-Client- und Mobile-Unterstützung (App/Mini-Programm) ermöglicht die Gerätesteuerung von überall."
-  },
-  "开放开发生态": {
-    "message": "Offenes Entwicklungsumfeld"
-  },
-  "提供 Python 控制接口与开源代码，支持开发者自定义扩展，共建智能玩具体验。": {
-    "message": "Bietet Python-Schnittstellen und Open-Source-Code, unterstützt Entwickler bei benutzerdefinierten Erweiterungen für ein gemeinsames intelligentes Spielzeugelebnis."
-  },
-  "homepage.heroTitle": {
-    "message": "UnderSilicon-Dokumentation"
-  },
-  "homepage.heroTagline": {
-    "message": "Entdecken Sie das UnderSilicon-Intelligente Ökosystem und erschließen Sie unendliche interaktive Möglichkeiten"
   }
 }
