更新教程链接

--- a/docs/玩法说明/气压寸止玩法3阶段升级版说明.md
+++ b/docs/玩法说明/气压寸止玩法3阶段升级版说明.md
@@ -5,6 +5,13 @@ sidebar_position: 0
 
 # 气压寸止玩法3阶段升级版
 
+## 视频版说明
+
+B站：https://www.bilibili.com/video/BV1ZicuzkESJ/
+youtube：https://youtu.be/HvIN5CQ44dI
+
+
+
 ## 简介
 这是一个基于气压传感器的寸止训练玩法。系统根据气压值智能调节震动强度，引导用户保持在兴奋边缘。当气压超过临界值时，会触发电击惩罚。
 
@@ -44,6 +51,7 @@ sidebar_position: 0
 ## 使用说明
 
 1. 完成气压设备组装，将所有设备连接到网络。
+设备组装视频教程：https://youtu.be/QQaT823gKHc
 2. 将气压设备放入身体，一般充气至20-25kpa，确保轻压时压力有明显变化的情况下压力适当低一些，这样可以减缓漏气。
 3. 设置中间气压和临界气压，初次玩的时候可以边玩边调整，这两个气压忍不住了就降低一些，没感觉提升一些。
 
