--- a/docs/玩法说明/气压寸止玩法3阶段升级版说明.md
+++ b/docs/玩法说明/气压寸止玩法3阶段升级版说明.md
@@ -10,6 +10,9 @@ sidebar_position: 0
 B站：https://www.bilibili.com/video/BV1ZicuzkESJ/
 youtube：https://youtu.be/HvIN5CQ44dI
 
+## 购买链接
+
+淘宝：https://item.taobao.com/item.htm?ft=t&id=1017049175869
 
 
 ## 简介
